--- a/jerrylib/build.gradle
+++ b/jerrylib/build.gradle
@@ -28,4 +28,30 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
     testCompile 'junit:junit:4.12'
+
+    //....image  start.....//
+    compile 'com.facebook.fresco:fresco:1.1.0'
+    // 在 API < 14 上的机器支持 WebP 时，需要添加
+    compile 'com.facebook.fresco:animated-base-support:1.1.0'
+    // 支持 GIF 动图，需要添加
+    compile 'com.facebook.fresco:animated-gif:1.1.0'
+    // 支持 WebP （静态图+动图），需要添加
+    compile 'com.facebook.fresco:animated-webp:1.1.0'
+    compile 'com.facebook.fresco:webpsupport:1.1.0'
+    compile "com.facebook.fresco:imagepipeline-okhttp3:0.12.0+"
+    compile 'jp.wasabeef:fresco-processors:2.0.0'//processors
+    compile 'com.github.bumptech.glide:glide:3.5.2'
+    //....image  end.....//
+
+
+    //....http start.....//
+    compile 'com.alibaba:fastjson:1.2.21'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.trello:rxlifecycle:1.0'
+    compile 'com.trello:rxlifecycle-components:1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.4'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
+    //....http end.....//
 }
