--- a/jerrylib/build.gradle
+++ b/jerrylib/build.gradle
@@ -54,4 +54,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     //....http end.....//
+
+
+    compile 'com.jakewharton:butterknife:8.1.0'
+    compile 'com.jakewharton:butterknife-compiler:8.1.0'
 }
